{
    "version": 1,
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player1",
            "id": "2dc8afe1-410b-4e06-bb32-c6c7a18ecb18",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "8c43f550-d45a-487f-8275-0ebe9d71584a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "5bdb5626-64b0-4701-b256-70d65c6d1d80",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Obtain",
                    "type": "Button",
                    "id": "e4869928-cec5-4ad3-b27c-aa4ddb427f88",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use",
                    "type": "Button",
                    "id": "a7368edf-0121-4886-a63b-e3fa715e624b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ef74cfab-d48f-4d93-8efa-b8e031746711",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0dac4178-6912-4a9b-ae5c-156851cc0c28",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1_Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3fb909cb-4fa3-4c6d-8344-14eb75548cb3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1_Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "147a0fde-3d17-40bd-9477-1528c277b075",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1_Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3a48573b-102e-4a7c-a151-8c4ea6c8152f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1_Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d0971aa0-d531-4ba3-8bdf-908f32cb4613",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1_Keyboard",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1d32a7d-9cdd-4dc3-8528-b096382c2b42",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1_Keyboard",
                    "action": "Obtain",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc073f04-d428-4ac2-a965-c116c9a2d6be",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1_Keyboard",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "515972a6-bfd3-4008-b86e-7b77af5a71f0",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "55a05e57-a9c7-4042-9ad5-7a1c2a369d74",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "0fbf26e8-047f-45e1-901e-c320aee5229b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Obtain",
                    "type": "Button",
                    "id": "c77740f8-0f3d-434f-8924-816b97757827",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use",
                    "type": "Button",
                    "id": "26d6a085-360a-423c-b0a5-967003c76e45",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "de86f697-06db-4fba-8e27-172250460e7d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5824e14c-67e5-4d21-b8e2-a04cd7fe9566",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player2_Arrows",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ec9a95e1-8394-4563-9297-eee3ecc8d895",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player2_Arrows",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d90f9aec-a4ce-4ee2-aaa3-c6650306af84",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player2_Arrows",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f81d5975-6858-477c-879e-1e6598b36aa5",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player2_Arrows",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7e3e25ac-5311-4a01-8995-8fe945f76908",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player2_Arrows",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "074355d2-7092-4899-a5de-74fa966ce5c9",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player2_Arrows",
                    "action": "Obtain",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef751e91-7b75-4dc5-9caf-6ff9f1482363",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player2_Arrows",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player1_Keyboard",
            "bindingGroup": "Player1_Keyboard",
            "devices": []
        },
        {
            "name": "Player2_Arrows",
            "bindingGroup": "Player2_Arrows",
            "devices": []
        }
    ]
}